--- a/scene1.html
+++ b/scene1.html
@@ -186,7 +186,7 @@ console.log(runAnim);
 }
 
 function render() {
-    mesh.rotation.y = theta;
+   // mesh.rotation.y = theta;
     renderer.render(scene, camera);
 }
     </script>
