--- a/scene1.html
+++ b/scene1.html
@@ -164,14 +164,19 @@ function init() {
         mesh = gltf.scene;
         console.log(mesh.children[0]);
         mesh.children[0].material = new THREE.MeshLambertMaterial();
-		scene.add( mesh );
+		    scene.add( mesh );
 
-     var mesh2 = mesh.clone();
-     scene.add( mesh2 );
+        var mesh2 = mesh.clone();
+        scene.add( mesh2 );
+
+        var mesh3 = mesh.clone();
+        scene.add( mesh3 );
 
         mesh2.position.z = -30;
         mesh.position.z = -30;
         mesh.position.x = 10;
+        mesh3.position.z = -30;
+        mesh3.position.x = -10;
      
     }
    
